 * Fixed erase_eprints epadmin command for Oracle
 * Added create_counter/drop_counter methods, fixed currval unavailable error
 * Fixed adding/removing fields for Oracle

2008-02-20 cjg
 * Fixed typo in suffix of Export::Simple s/text/txt/

2008-02-20 cjg
 * Added documents.format to default adv. search

2008-02-20 cjg
 * Cleaned up mixed indentation in 70_autocomplete.js
 * Added "row" prefix for autocompletion to target cells in the row
 * Added "hide" and "show" actions to autocomplete processor.

2008-02-21 tdb
 * Added has_field/has_column methods to database to determine whether a
    dataset/table has the field/column configured
 * An admin plugin to add/remove fields from the database
 * Added options to add/remove fields scripts to add/remove a dataset

2008-02-21 cjg
 * generate_views now works with the new Update::Views module. Closes #3264
 * Added --view --lang and --generate options to generate_views

2008-02-21 cjg
 * Added a "uri" method to dataobj which returns a currently unresolveable URI
    for any dataobject. We might make themresolvable later.
 * Added this URI as an "id" attribute when XML exporting data.

2008-02-23 tdb
 * Changed user check to be overridable by a use() pragma: "no_check_user"
 * Made test_config cross-platform with a new Platform call: "read_perl_script"

2008-02-25 tdb
 * Don't squash ordervalues where a dataset is !indexable
 * Truncate ordervalues values before insertion
 * The "no_check_user" pragma from r3357

2008-02-27 tdb
 * Made Boolean respect "input_rows"
 * add/remove field plugin now does the whole process using a workflow
 * Tool for boot-strapping the metafield dataset

2008-02-28 tdb
 * Corrected link in editor alert email, fixing #3286
 * Fixed an undef warning in EPrints::Email

2008-03-04 tdb
 * Added missing Perl export plugin
 * Now adds default phrases for sub-fields/set options

2008-03-05 tdb
 * Added missing mysql_version_from_dbh method, fixing #3301
